test/hotCases/errors/events/d.js
import e from "./e";

if(module.hot) {
	module.hot.decline();
}
